; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/fieldbus/extr_dev_core.c_enabled_store.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/fieldbus/extr_dev_core.c_enabled_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.fieldbus_dev = type { i32 (%struct.fieldbus_dev*, i32)* }

@ENOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*, i64)* @enabled_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enabled_store(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.device*, align 8
  %7 = alloca %struct.device_attribute*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.fieldbus_dev*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %6, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %13 = load %struct.device*, %struct.device** %6, align 8
  %14 = call %struct.fieldbus_dev* @dev_get_drvdata(%struct.device* %13)
  store %struct.fieldbus_dev* %14, %struct.fieldbus_dev** %10, align 8
  %15 = load %struct.fieldbus_dev*, %struct.fieldbus_dev** %10, align 8
  %16 = getelementptr inbounds %struct.fieldbus_dev, %struct.fieldbus_dev* %15, i32 0, i32 0
  %17 = load i32 (%struct.fieldbus_dev*, i32)*, i32 (%struct.fieldbus_dev*, i32)** %16, align 8
  %18 = icmp ne i32 (%struct.fieldbus_dev*, i32)* %17, null
  br i1 %18, label %22, label %19

19:                                               ; preds = %4
  %20 = load i32, i32* @ENOTSUPP, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %5, align 4
  br label %43

22:                                               ; preds = %4
  %23 = load i8*, i8** %8, align 8
  %24 = call i32 @kstrtobool(i8* %23, i32* %11)
  store i32 %24, i32* %12, align 4
  %25 = load i32, i32* %12, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %22
  %28 = load i32, i32* %12, align 4
  store i32 %28, i32* %5, align 4
  br label %43

29:                                               ; preds = %22
  %30 = load %struct.fieldbus_dev*, %struct.fieldbus_dev** %10, align 8
  %31 = getelementptr inbounds %struct.fieldbus_dev, %struct.fieldbus_dev* %30, i32 0, i32 0
  %32 = load i32 (%struct.fieldbus_dev*, i32)*, i32 (%struct.fieldbus_dev*, i32)** %31, align 8
  %33 = load %struct.fieldbus_dev*, %struct.fieldbus_dev** %10, align 8
  %34 = load i32, i32* %11, align 4
  %35 = call i32 %32(%struct.fieldbus_dev* %33, i32 %34)
  store i32 %35, i32* %12, align 4
  %36 = load i32, i32* %12, align 4
  %37 = icmp slt i32 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %29
  %39 = load i32, i32* %12, align 4
  store i32 %39, i32* %5, align 4
  br label %43

40:                                               ; preds = %29
  %41 = load i64, i64* %9, align 8
  %42 = trunc i64 %41 to i32
  store i32 %42, i32* %5, align 4
  br label %43

43:                                               ; preds = %40, %38, %27, %19
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}

declare dso_local %struct.fieldbus_dev* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @kstrtobool(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
